src/tests/ui/implicit-return-err.vif
fn value() i32 {
    1
}

fn main() void {
    value()
}

//@ args: build
//@ stderr:
// error: function with non-void return type does not return on all paths
//
